<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Classic</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="beethoven">Beethoven</string>
    <string name="bach">Bach</string>
    <string name="mozart">Mozart</string>
    <string name="pachelbel">Pachelbel</string>
    <string name="instructions">Click the buttons to listen to a composer\'s song and read about him on Wikipedia</string>

</resources>
